@@ -1,7 +1,23 @@
+/*
+ * Copyright (c) 2020 Broadcom.
+ * The term "Broadcom" refers to Broadcom Inc. and/or its subsidiaries.
+ *
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *    Broadcom, Inc. - initial API and implementation
+ *
+ */
 package com.broadcom.lsp.cobol.service.delegates.completions;
 
 import com.broadcom.lsp.cobol.service.CobolDocumentModel;
 import com.broadcom.lsp.cobol.service.delegates.validations.AnalysisResult;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import org.eclipse.lsp4j.*;
 import org.junit.jupiter.api.Test;
 
@@ -36,13 +52,13 @@ class SectionCompletionTest {
     void testSectionCompletion() {
         CobolDocumentModel document = createModel();
 
-        Completions completions = new Completions(Set.of(new SectionCompletion()));
+        Completions completions = new Completions(ImmutableSet.of(new SectionCompletion()));
         List<CompletionItem> completionItems =
                 completions.collectFor(document, createCompletionParams()).getItems();
 
         assertEquals(2, completionItems.size());
-        checkContains(completionItems.get(0), List.of("100-Test", "000-Main-Logic"));
-        checkContains(completionItems.get(1), List.of("100-Test", "000-Main-Logic"));
+        checkContains(completionItems.get(0), ImmutableList.of("100-Test", "000-Main-Logic"));
+        checkContains(completionItems.get(1), ImmutableList.of("100-Test", "000-Main-Logic"));
 
         assertEquals(CompletionItemKind.Function, completionItems.get(0).getKind());
     }
