@@ -16,11 +16,12 @@
 package com.broadcom.lsp.cobol.service.delegates.formations;
 
 import com.broadcom.lsp.cobol.service.CobolDocumentModel;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import org.eclipse.lsp4j.TextEdit;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.anyList;
@@ -30,24 +31,24 @@ import static org.mockito.Mockito.when;
 /** Test {@link Formations} class */
 class FormationsTest {
 
-  private final Formation formation_1 = mock(Formation.class);
-  private final Formation formation_2 = mock(Formation.class);
-  private final Formations formations = new Formations(Set.of(formation_1, formation_2));
+  private static final Formation FORMATION_1 = mock(Formation.class);
+  private static final Formation FORMATION_2 = mock(Formation.class);
+  private static final Formations FORMATIONS = new Formations(ImmutableSet.of(FORMATION_1, FORMATION_2));
 
   @Test
   void WhenCobolDocumentModelNull_thenFormatReturnsEmptyList() {
-    List<TextEdit> format = formations.format(null);
+    List<TextEdit> format = FORMATIONS.format(null);
     assertEquals(0, format.size());
   }
 
   @Test
   void WhenCobolDocumentModelNonNull_thenFormatReturnsFormattedString() {
     CobolDocumentModel model = new CobolDocumentModel("SAMPLE TEXT FOR TEST");
-    List<TextEdit> response_1 = List.of(new TextEdit());
-    List<TextEdit> response_2 = List.of(new TextEdit(), new TextEdit());
-    when(formation_1.format(anyList())).thenReturn(response_1);
-    when(formation_2.format(anyList())).thenReturn(response_2);
-    List<TextEdit> format = formations.format(model);
+    List<TextEdit> response1 = ImmutableList.of(new TextEdit());
+    List<TextEdit> response2 = ImmutableList.of(new TextEdit(), new TextEdit());
+    when(FORMATION_1.format(anyList())).thenReturn(response1);
+    when(FORMATION_2.format(anyList())).thenReturn(response2);
+    List<TextEdit> format = FORMATIONS.format(model);
     // expect a flattened list of 2 responses.
     assertEquals(3, format.size());
   }
