@@ -21,6 +21,7 @@ import com.broadcom.lsp.cobol.jrpc.CobolLanguageClient;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.*;
 import com.broadcom.lsp.cobol.service.utils.FileSystemService;
+import com.google.common.collect.ImmutableList;
 import com.google.inject.AbstractModule;
 import com.google.inject.Guice;
 import com.google.inject.Injector;
@@ -47,6 +48,12 @@ public class UseCaseUtils {
   private static final String CPY_URI_PREFIX = "file:///c%3A/workspace/.c4z/.copybooks/";
   private static final String CPY_URI_SUFFIX = ".cpy";
 
+  /**
+   * Construct the file URI from provided file name
+   *
+   * @param name the copybook name without extension
+   * @return the URI
+   */
   public static String toURI(String name) {
     return CPY_URI_PREFIX + name + CPY_URI_SUFFIX;
   }
@@ -93,7 +100,7 @@ public class UseCaseUtils {
    * @return the entire analysis result
    */
   public static AnalysisResult analyze(String fileName, String text, List<CobolText> copybooks) {
-    return analyze(fileName, text, copybooks, List.of(), CopybookProcessingMode.ENABLED);
+    return analyze(fileName, text, copybooks, ImmutableList.of(), CopybookProcessingMode.ENABLED);
   }
 
   /**
@@ -130,7 +137,7 @@ public class UseCaseUtils {
       CopybookProcessingMode copybookProcessingMode) {
     SettingsService mockSettingsService = mock(SettingsService.class);
     when(mockSettingsService.getConfiguration(any()))
-        .thenReturn(CompletableFuture.completedFuture(List.of()));
+        .thenReturn(CompletableFuture.completedFuture(ImmutableList.of()));
 
     CobolLanguageClient languageClient = mock(CobolLanguageClient.class);
     FileSystemService mockFileSystemService = mock(FileSystemService.class);
@@ -161,6 +168,12 @@ public class UseCaseUtils {
         .analyze(fileName, text, copybookProcessingMode);
   }
 
+  /**
+   * Convert CobolText into CopybookModel.
+   *
+   * @param cobolText the CobolText instance
+   * @return the CopybookModel instance
+   */
   public static CopybookModel toCopybookModel(CobolText cobolText) {
     return new CopybookModel(
         cobolText.getFileName(), toURI(cobolText.getFileName()), cobolText.getFullText());
