@@ -16,10 +16,9 @@
 package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /** This test checks that CICS variable name is allowed. */
 class TestCICSVariableNameAllowed {
@@ -29,13 +28,13 @@ class TestCICSVariableNameAllowed {
           + "        PROGRAM-ID. TEST1.\n"
           + "        DATA DIVISION.\n"
           + "        WORKING-STORAGE SECTION.\n"
-          + "        01 {$*CICS}.\n" // CICS variable name allowed
+          + "        01 {$*CICS} PIC 9.\n" // CICS variable name allowed
           + "        PROCEDURE DIVISION.\n"
           + "        {#*CICS}.\n" // CICS paragraphName allowed
           + "        END PROGRAM TEST1.";
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(), ImmutableMap.of());
   }
 }
