@@ -17,6 +17,8 @@ package com.broadcom.lsp.cobol.usecases;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.delegates.validations.AnalysisResult;
 import com.broadcom.lsp.cobol.service.delegates.validations.UseCaseUtils;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import lombok.Value;
 import org.eclipse.lsp4j.DocumentSymbol;
 import org.junit.jupiter.api.Test;
@@ -30,27 +32,27 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 /** This test checks that Outline tree has correct lines numbers for elements */
 public class TestOutlineTreeLineNumbers {
   private static final String TEXT =
-      "00     IDENTIFICATION DIVISION.\n" +
-          "01     DATA DIVISION.\n" +
-          "02     WORKING-STORAGE SECTION.\n" +
-          "03     01 STRUCTNAME.\n" +
-          "04     03 VARNAME  PIC X(20).\n" +
-          "05     COPY BAR.";
+      "00     IDENTIFICATION DIVISION.\n"
+          + "01     DATA DIVISION.\n"
+          + "02     WORKING-STORAGE SECTION.\n"
+          + "03     01 STRUCTNAME.\n"
+          + "04     03 VARNAME  PIC X(20).\n"
+          + "05     COPY BAR.";
 
   @Test
   void test() {
-    AnalysisResult result = UseCaseUtils.analyze(UseCaseUtils.DOCUMENT_URI, TEXT, List.of(
+    AnalysisResult result = UseCaseUtils.analyze(UseCaseUtils.DOCUMENT_URI, TEXT, ImmutableList.of(
         new CobolText("BAR", "")
     ));
-    Map<String, LineRange> expectedRanges = Map.of(
-        "PROGRAM", new LineRange(0, 4),
-        "IDENTIFICATION DIVISION", new LineRange(0, 0),
-        "DATA DIVISION", new LineRange(1, 4),
-        "WORKING-STORAGE SECTION", new LineRange(2, 4),
-        "STRUCTNAME", new LineRange(3, 4),
-        "VARNAME", new LineRange(4, 4),
-        "COPY BAR", new LineRange(5, 5)
-    );
+    Map<String, LineRange> expectedRanges = new ImmutableMap.Builder<String, LineRange>()
+        .put("PROGRAM", new LineRange(0, 4))
+        .put("IDENTIFICATION DIVISION", new LineRange(0, 0))
+        .put("DATA DIVISION", new LineRange(1, 4))
+        .put("WORKING-STORAGE SECTION", new LineRange(2, 4))
+        .put("STRUCTNAME", new LineRange(3, 4))
+        .put("VARNAME", new LineRange(4, 4))
+        .put("COPY BAR", new LineRange(5, 5))
+        .build();
     assertEquals(expectedRanges, extractLineRange(result.getOutlineTree()));
   }
 
