@@ -17,12 +17,11 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.DiagnosticSeverity;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks that the remarks not marked as comments, and the syntax analysis applied.
@@ -56,15 +55,13 @@ class TestRemarksAreUnsupported {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(),
-        Map.of(
+        ImmutableList.of(),
+        ImmutableMap.of(
             "unsupported",
             new Diagnostic(
                 null,
-                "Syntax error on 'INPUT' expected "
-                    + "{<EOF>, AUTHOR, DATA, DATE_COMPILED, DATE_WRITTEN, "
-                    + "END, ENVIRONMENT, ID, IDENTIFICATION, INSTALLATION, "
-                    + "PROCEDURE, SECURITY, COMMENTENTRYLINE}",
+                "Syntax error on 'INPUT' expected {<EOF>, AUTHOR, DATE-COMPILED, DATE-WRITTEN, ID, IDENTIFICATION, INSTALLATION,"
+                    + " ENVIRONMENT, PROCEDURE, DATA, END, SECURITY}",
                 DiagnosticSeverity.Error,
                 SourceInfoLevels.ERROR.getText())));
   }
