@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test verifies that several similar COPY statements with REPLACING does not produce
@@ -29,23 +28,22 @@ import java.util.Map;
 class TestSameCopybookReplacingDeclarationsNotProducesNPE {
 
   private static final String TEXT =
-      "0      IDENTIFICATION DIVISION.\n"
-          + "1      PROGRAM-ID. TESTREPL.\n"
-          + "2      DATA DIVISION.\n"
-          + "3      WORKING-STORAGE SECTION.\n"
-          + "4      01  {$*PARENT}.\n"
-          + "5      COPY {~REPL} REPLACING ==:TAG:== BY ==ABC==.\n"
-          + "6      COPY {~REPL} REPLACING ==:TAG:== BY ==ABC==.\n"
-          + "7      PROCEDURE DIVISION.\n"
-          + "8      {#*MAINLINE}.\n"
-          + "9          MOVE 0 TO {$ABC-ID}.\n"
-          + "10         GOBACK. ";
+      "       IDENTIFICATION DIVISION.\n"
+          + "       PROGRAM-ID. TESTREPL.\n"
+          + "       DATA DIVISION.\n"
+          + "       WORKING-STORAGE SECTION.\n"
+          + "       01  {$*PARENT}.\n"
+          + "       COPY {~REPL} REPLACING ==:TAG:== BY ==ABC==.\n"
+          + "       COPY {~REPL} REPLACING ==:TAG:== BY ==ABC==.\n"
+          + "       PROCEDURE DIVISION.\n"
+          + "       {#*MAINLINE}.\n"
+          + "           GOBACK. ";
 
   private static final String REPL = "       05 {$*:TAG:-ID^ABC-ID} PIC 9.\n";
   private static final String REPL_NAME = "REPL";
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(REPL_NAME, REPL)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(REPL_NAME, REPL)), ImmutableMap.of());
   }
 }
