@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks that the REPLACING statement with several patterns specified does not cause any
@@ -49,6 +48,6 @@ class TestSeveralReplacingTags {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(CUSTCOPY_NAME, CUSTCOPY)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(CUSTCOPY_NAME, CUSTCOPY)), ImmutableMap.of());
   }
 }
