@@ -17,11 +17,10 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static org.eclipse.lsp4j.DiagnosticSeverity.Error;
 
@@ -32,15 +31,15 @@ class TestSqlIncludeStatementNotFoundCopybook {
           + "       PROGRAM-ID. HELLO-SQL.\n"
           + "       DATA DIVISION.\n"
           + "       WORKING-STORAGE SECTION.\n"
-          + "       01 {$*PARENT}. EXEC SQL INCLUDE {~CPYNAME|missing} END-EXEC.\n"
+          + "       EXEC SQL INCLUDE {~CPYNAME|missing} END-EXEC.\n"
           + "       PROCEDURE DIVISION.";
 
   @Test
   void test() {
     UseCaseEngine.runTest(
             TEXT,
-            List.of(),
-            Map.of(
+            ImmutableList.of(),
+            ImmutableMap.of(
                     "missing",
                     new Diagnostic(
                             null, "CPYNAME: Copybook not found", Error, SourceInfoLevels.ERROR.getText(), "MISSING_COPYBOOK")));
