@@ -15,51 +15,54 @@
 package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.List;
-import java.util.Map;
 import java.util.stream.Stream;
 
 /** This use cases checks if varying with multiple identifiers works correctly. */
 class TestVaryingCorrect {
 
   private static final String BOILERPLATE =
-      "        IDENTIFICATION DIVISION. \r\n"
-          + "        PROGRAM-ID. test1.\r\n"
-          + "        DATA DIVISION.\r\n"
-          + "        WORKING-STORAGE SECTION.\r\n"
-          + "        01 {$*IDENTIFIER-1}.\r\n"
-          + "        01 {$*IDENTIFIER-2}.\r\n"
-          + "        01 {$*IDENTIFIER-3}.\r\n"
-          + "        01 {$*IDENTIFIER-4}.\r\n"
-          + "        01 {$*IDENTIFIER-5}.\r\n"
-          + "        01 {$*IDENTIFIER-6}.\r\n"
-          + "        01 {$*IDENTIFIER-7}.\r\n"
-          + "        01 {$*IDENTIFIER-8}.\r\n"
-          + "        01 {$*IDENTIFIER-9}.\r\n"
-          + "        01 {$*IDENTIFIER-10}.\r\n"
-          + "        PROCEDURE DIVISION.\r\n"
-          + "        {#*PROCEDURE-NAME-1}.\r\n"
-          + "        {#*PROCEDURE-NAME-2}.\r\n";
+      "        IDENTIFICATION DIVISION. \n"
+          + "        PROGRAM-ID. test1.\n"
+          + "        DATA DIVISION.\n"
+          + "        WORKING-STORAGE SECTION.\n"
+          + "        01 {$*IDENTIFIER-1} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-2} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-3} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-4} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-5} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-6} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-7} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-8} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-9} PIC 9.\n"
+          + "        01 {$*IDENTIFIER-10} PIC 9.\n"
+          + "            88 {$*CONDITION-1} VALUE 1.\n"
+          + "            88 {$*CONDITION-2} VALUE 2.\n"
+          + "            88 {$*CONDITION-3} VALUE 3.\n"
+          + "        PROCEDURE DIVISION.\n"
+          + "        {#*PROCEDURE-NAME-1}.\n"
+          + "        {#*PROCEDURE-NAME-2}.\n";
 
   private static final String VARYING_WITH_TWO_IDENTIFIERS =
-      "            PERFORM {#PROCEDURE-NAME-1} THROUGH {#PROCEDURE-NAME-2}\r\n"
-          + "            VARYING {$IDENTIFIER-2} FROM {$IDENTIFIER-3}\r\n"
-          + "            BY {$IDENTIFIER-4} UNTIL CONDITION-1\r\n"
-          + "            AFTER {$IDENTIFIER-5} FROM {$IDENTIFIER-6}\r\n"
-          + "            BY {$IDENTIFIER-7} UNTIL CONDITION-2.";
+      "            PERFORM {#PROCEDURE-NAME-1} THROUGH {#PROCEDURE-NAME-2}\n"
+          + "            VARYING {$IDENTIFIER-2} FROM {$IDENTIFIER-3}\n"
+          + "            BY {$IDENTIFIER-4} UNTIL {$CONDITION-1}\n"
+          + "            AFTER {$IDENTIFIER-5} FROM {$IDENTIFIER-6}\n"
+          + "            BY {$IDENTIFIER-7} UNTIL {$CONDITION-2}.";
 
   private static final String VARYING_WITH_THREE_IDENTIFIERS =
-      "            PERFORM {#PROCEDURE-NAME-1} THROUGH {#PROCEDURE-NAME-2}\r\n"
-          + "            VARYING {$IDENTIFIER-2} FROM {$IDENTIFIER-3}\r\n"
-          + "            BY {$IDENTIFIER-4} UNTIL CONDITION-1\r\n"
-          + "            AFTER {$IDENTIFIER-5} FROM {$IDENTIFIER-6}\r\n"
-          + "            BY {$IDENTIFIER-7} UNTIL CONDITION-2\r\n"
-          + "            AFTER {$IDENTIFIER-8} FROM {$IDENTIFIER-9}\r\n"
-          + "            BY {$IDENTIFIER-10} UNTIL CONDITION-3.";
+      "            PERFORM {#PROCEDURE-NAME-1} THROUGH {#PROCEDURE-NAME-2}\n"
+          + "            VARYING {$IDENTIFIER-2} FROM {$IDENTIFIER-3}\n"
+          + "            BY {$IDENTIFIER-4} UNTIL {$CONDITION-1}\n"
+          + "            AFTER {$IDENTIFIER-5} FROM {$IDENTIFIER-6}\n"
+          + "            BY {$IDENTIFIER-7} UNTIL {$CONDITION-2}\n"
+          + "            AFTER {$IDENTIFIER-8} FROM {$IDENTIFIER-9}\n"
+          + "            BY {$IDENTIFIER-10} UNTIL {$CONDITION-3}.";
 
   private static Stream<String> textsToTest() {
     return Stream.of(
@@ -70,6 +73,6 @@ class TestVaryingCorrect {
   @MethodSource("textsToTest")
   @DisplayName("Parameterized - varying tests")
   void test(String text) {
-    UseCaseEngine.runTest(text, List.of(), Map.of());
+    UseCaseEngine.runTest(text, ImmutableList.of(), ImmutableMap.of());
   }
 }
